--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,12 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+5-12 [【CDT推荐】本周推荐媒体](/articles/cdt/382651.md)
+
+5-12 [【麻辣总局】爱国不分早晚、不论出身](/articles/cdt/382659.md)
+
+5-12 [【旧闻重温】新时代观察｜川震十年，“我们的娃娃”还在等一个答案](/articles/cdt/382660.md)
+
 5-12 [骚客文艺 | 商人野夫](/articles/cdt/382673.md)
 
 5-12 [【网络民议】成都四十九中学生坠亡事件持续发酵  家长与群众聚集校外要真相遭警方维稳（含现场视频）](/articles/cdt/382675.md)
@@ -594,10 +600,4 @@
 4-10 [叁蛋蛋说｜“高人”崔伟背后有高人？](/articles/cdt/383946.md)
 
 4-12 [【CDT敏感词周报】第十九期：武汉陵园、施明磊、弑平、第93届奥斯卡](/articles/cdt/383947.md)
-
-4-10 [【中国哭墙】大概最可恶的键盘侠，在你这里也是温柔的（4月4日-10日，2021年）](/articles/cdt/383949.md)
-
-4-10 [【弄个大新闻】强制推广的“国家反诈中心app”上交隐私给国家？](/articles/cdt/383969.md)
-
-4-9 [Weifeng Yang｜翻译：汉族人是中国的白人吗？](/articles/cdt/383973.md)
 
