--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+5-12 [港府破格购东京奥运转播权予商营电视台 遭质疑以公帑助商家但「零咨询」](/articles/rfi/1030031.md)
+
+5-12 [反修例示威者堕楼疑死控：「政府促成」 家人称未闻梁有寻死念头](/articles/rfi/1030032.md)
+
+5-12 [受美制裁的香港国安处长蔡展鹏疑光顾无牌按摩店 停职受查](/articles/rfi/1030033.md)
+
 5-12 [日股收黑 – 法国国际广播电台 - RFI](/articles/rfi/1030034.md)
 
 5-12 [美加吁以巴避免冲突 阻平民无辜丧命憾事 – 法国国际广播电台 - RFI](/articles/rfi/1030035.md)
@@ -594,10 +600,4 @@
 5-7 [华航诺富特饭店机师群聚感染冲击北台湾 - 台北一周](/articles/rfi/1030329.md)
 
 5-7 [法国复课后因确诊案例关闭4,992个班级](/articles/rfi/1030330.md)
-
-5-7 [面临第三波疫情 巴基斯坦清真寺仍挤满信徒 – 法国国际广播电台 - RFI](/articles/rfi/1030331.md)
-
-5-7 [印尼西纳彭火山爆发 灰云直喷2800公尺高空 – 法国国际广播电台 - RFI](/articles/rfi/1030332.md)
-
-5-7 [黄之锋参与悼念六四晚会遭判刑 美国务卿布林肯呼吁放人 – 法国国际广播电台 - RFI](/articles/rfi/1030333.md)
 
