--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-12 [停工一年后，飞行员能安全复飞吗？](/articles/nyt/1046873.md)
+
 5-12 [检察官寻求对亚特兰大枪击案嫌犯判处死刑](/articles/nyt/1046874.md)
 
 5-12 [玻璃栈道被风吹“破”，中国网红景点安全性遭质疑](/articles/nyt/1046875.md)
@@ -598,6 +600,4 @@
 2-22 [简报：冬奥前中国人权问题引关注；多人因“诋毁英烈”被拘](/articles/nyt/1047171.md)
 
 2-22 [时间在中国一边吗](/articles/nyt/1047172.md)
-
-2-19 [知名华裔设计师王大仁遭多名男性指控性行为不端](/articles/nyt/1047173.md)
 
