--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-12 [面临人口危机的中国会全面放开生育吗？](/articles/nyt/1046872.md)
+
 5-12 [停工一年后，飞行员能安全复飞吗？](/articles/nyt/1046873.md)
 
 5-12 [检察官寻求对亚特兰大枪击案嫌犯判处死刑](/articles/nyt/1046874.md)
@@ -598,6 +600,4 @@
 2-22 [面临抵制冬奥呼声，中国人权问题可能改善吗？](/articles/nyt/1047170.md)
 
 2-22 [简报：冬奥前中国人权问题引关注；多人因“诋毁英烈”被拘](/articles/nyt/1047171.md)
-
-2-22 [时间在中国一边吗](/articles/nyt/1047172.md)
 
