--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-12 [巴以冲突升级 双方已经有40人被打死 美国表态](/articles/voa/1040859.md)
+
 5-12 [被指针对亚裔女性 美国佐治亚州按摩店枪手嫌疑人面临死刑审判](/articles/voa/1040860.md)
 
 5-12 [忧国家安全法被滥用 香港美国商会四成会员打算近期内撤离](/articles/voa/1040861.md)
@@ -598,6 +600,4 @@
 4-29 [美国猛醒： 药品供应的命门不可掐在中国手里](/articles/voa/1041157.md)
 
 4-29 [美参议员致函特鲁多支持哈利法克斯论坛颁奖给蔡英文](/articles/voa/1041158.md)
-
-4-29 [拜登总统就任百天 拥抱跨大西洋盟友](/articles/voa/1041159.md)
 
