--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+5-12 [台湾中研院学者呼吁院长 比照林郑模式处理张翔](/articles/rfa/1045619.md)
+
 5-12 [《国安法》不会影响香港营商环境？  报告显示近半商家“用脚投票”](/articles/rfa/1045620.md)
 
 5-12 [中国生育率将降至全球最低 中国学者倡生小孩重赏百万](/articles/rfa/1045621.md)
@@ -598,6 +600,4 @@
 4-9 [挽救中欧关系僵局  习近平致电德国总理默克尔](/articles/rfa/1045917.md)
 
 4-9 [加拿大省长华裔顾问称维吾尔种族灭绝乃谎言     遭舆论抨击](/articles/rfa/1045918.md)
-
-4-9 [美黑名单新增七家中国实体   中国用美技术、台晶片研发武器](/articles/rfa/1045919.md)
 
