--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -7,6 +7,8 @@
 
 5-12 [【404文库】天府事变｜全网震怒，这张照片将会钉在成都49中的耻辱柱上](/articles/cdt/382638.md)
 
+5-12 [数据归集处｜人口数据再剖析](/articles/cdt/382639.md)
+
 5-12 [端传媒｜成都49中门口，那些手举菊花、高喊“真相”的人们](/articles/cdt/382644.md)
 
 5-12 [维舟｜孩子坠亡之后](/articles/cdt/382650.md)
@@ -598,6 +600,4 @@
 4-11 [张正承 | “合法监听”，究竟是个什么鸟？](/articles/cdt/383924.md)
 
 4-11 [【网络民议】举报历史虚无主义“12377”上线   网民：嚯！全世界最先进的反谣言系统](/articles/cdt/383932.md)
-
-4-10 [【立此存照】重庆江津法院 | 史上最高规格！江津法院获评政法新媒体工作先进单位！](/articles/cdt/383937.md)
 
