--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+5-12 [印度新冠死亡总数超过25万，单日死亡人数再破记录](/articles/rfi/1030022.md)
+
+5-12 [通膨罩顶 亚股普遍延续前一天跌势 – 法国国际广播电台 - RFI](/articles/rfi/1030023.md)
+
+5-12 [非洲挖掘发现最古老的人类墓穴 - 文化遗产](/articles/rfi/1030024.md)
+
 5-12 [美国商会调查：逾40%会员企业打算离开香港 国安法疑虑为最大原因](/articles/rfi/1030025.md)
 
 5-12 [艺术家巴斯奇亚画作In this Case 逾31亿元售出 – 法国国际广播电台 - RFI](/articles/rfi/1030026.md)
@@ -594,10 +600,4 @@
 5-7 [美国4月新增26.6万工作机会 表现不如预期 – 法国国际广播电台 - RFI](/articles/rfi/1030320.md)
 
 5-7 [台湾前国安高官早就叛逃大陆？ 疑携带机密名单与文件](/articles/rfi/1030321.md)
-
-5-7 [法国知名大厨备具争议的克里斯多夫.勒罗伊 - 法国美食](/articles/rfi/1030322.md)
-
-5-7 [全球COVID-19疫情逾1亿5598万确诊 近326万人病亡 – 法国国际广播电台 - RFI](/articles/rfi/1030323.md)
-
-5-7 [波尔图社会峰会：迈向后疫情下更重社会保护的欧洲 - 要闻解说](/articles/rfi/1030324.md)
 
