--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,12 @@
 路透
 ------
 
+5-12 [图表新闻：中国4月末外币存款达万亿美元创纪录 短期料仍保持增势](/articles/reuters/1038170.md)
+
+5-12 [中国网信办拟规定收集个人汽车数据应取得被收集人同意--意见稿](/articles/reuters/1038171.md)
+
+5-12 [煤价淡季暴涨 中国多家机构暂停发布相关价格指数](/articles/reuters/1038172.md)
+
 5-12 [美国将小米移出“黑名单” 中国外交部称希望美纠正上一届政府的错误](/articles/reuters/1038173.md)
 
 5-12 [全球半导体短缺情况今年将持续 料明年第二季才回复正常供应--Gartner](/articles/reuters/1038174.md)
@@ -594,10 +600,4 @@
 5-4 [德企对于中国及北美运营状况的看法乐观 但对东欧和南美前景看法变差](/articles/reuters/1038468.md)
 
 5-4 [分析：股神巴菲特光环褪色 伯克希尔部分股东信心动摇](/articles/reuters/1038469.md)
-
-5-4 [综述：美国4月制造业活动增速放缓 受累于需求高涨之际的供应链瓶颈](/articles/reuters/1038470.md)
-
-5-4 [亚洲股市微升 投资者看向经济复苏迹象](/articles/reuters/1038471.md)
-
-5-4 [独家：Novavax计划年底前开始向欧盟交付疫苗 本周料签合同--欧盟消息](/articles/reuters/1038472.md)
 
