--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+5-12 [【404文库】余姚公安｜紧急预警！我市多名女性在“学习强国”上被骗数百万](/articles/cdt/382627.md)
+
 5-12 [百神搜神记｜易小荷：天真大女人](/articles/cdt/382637.md)
 
 5-12 [【404文库】天府事变｜全网震怒，这张照片将会钉在成都49中的耻辱柱上](/articles/cdt/382638.md)
@@ -598,6 +600,4 @@
 4-11 [chenzijuan | 我在我的丈夫常玮平被酷刑的宝钛宾馆住了一晚](/articles/cdt/383920.md)
 
 4-11 [张正承 | “合法监听”，究竟是个什么鸟？](/articles/cdt/383924.md)
-
-4-11 [【网络民议】举报历史虚无主义“12377”上线   网民：嚯！全世界最先进的反谣言系统](/articles/cdt/383932.md)
 
