--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+5-13 [法国封锁令初步解封 准露天餐厅咖啡馆接待50%顾客](/articles/rfi/1030006.md)
+
+5-12 [拜登不想陷入巴以冲突](/articles/rfi/1030007.md)
+
+5-12 [法学者：未来二三十年中国劳动力将大幅减少 - 要闻解说](/articles/rfi/1030008.md)
+
 5-12 [以色列与巴勒斯坦冲突 增至56死 – 法国国际广播电台 - RFI](/articles/rfi/1030009.md)
 
 5-12 [独立小组报告：COVID-19疫情原可避免 – 法国国际广播电台 - RFI](/articles/rfi/1030010.md)
@@ -594,10 +600,4 @@
 5-8 [布林肯安理会发言 责俄中为恶不受惩罚](/articles/rfi/1030304.md)
 
 5-8 [日相：疫苗是防疫关键 目标一天施打百万剂](/articles/rfi/1030305.md)
-
-5-8 [路透社：印度暂停中国制造无线移动设备进口](/articles/rfi/1030306.md)
-
-5-8 [法国又增加对7国入境旅客强制隔离](/articles/rfi/1030307.md)
-
-5-8 [中国国药集团新冠疫苗列入世卫组织紧急使用清单](/articles/rfi/1030308.md)
 
