--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-12 [中国人权律师赴美被限制出境 只能留下来“建设祖国”](/articles/voa/1040855.md)
+
 5-12 [美国防部将小米公司从黑名单中拿掉，分析：拜登政府仍会继续上届政府的某些禁令](/articles/voa/1040856.md)
 
 5-12 [中国人口2026至2030年或迎拐点 负增长时代渐行渐近](/articles/voa/1040857.md)
@@ -598,6 +600,4 @@
 4-29 [作为见证与抗争 中国独立纪录片走过的高山低谷](/articles/voa/1041153.md)
 
 4-29 [中国称拜登上台后美军在中国周边活动大幅增加](/articles/voa/1041154.md)
-
-4-29 [受美国制裁影响 华为第一季度营收大幅下滑](/articles/voa/1041155.md)
 
