--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+5-12 [汶川地震十三周年 罹难者家属坚决追责](/articles/rfa/1045617.md)
+
 5-12 [台湾2天新增23起本土病例  流行病专家：未来28天是关键](/articles/rfa/1045618.md)
 
 5-12 [台湾中研院学者呼吁院长 比照林郑模式处理张翔](/articles/rfa/1045619.md)
@@ -598,6 +600,4 @@
 4-9 [二十四位科学家要求重启溯源调查  无论中国是否参与](/articles/rfa/1045915.md)
 
 4-9 [“长沙富能案”或秘密判决    程渊妻女逃抵美国](/articles/rfa/1045916.md)
-
-4-9 [挽救中欧关系僵局  习近平致电德国总理默克尔](/articles/rfa/1045917.md)
 
