--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-13 [澳大利亚前议员华裔顾问挑战反外国干涉法 高院裁定联邦警察搜查合法](/articles/voa/1040854.md)
+
 5-12 [中国人权律师赴美被限制出境 只能留下来“建设祖国”](/articles/voa/1040855.md)
 
 5-12 [美国防部将小米公司从黑名单中拿掉，分析：拜登政府仍会继续上届政府的某些禁令](/articles/voa/1040856.md)
@@ -598,6 +600,4 @@
 4-29 [中国人口“有增无减” 国家统计局欲盖弥彰？](/articles/voa/1041152.md)
 
 4-29 [作为见证与抗争 中国独立纪录片走过的高山低谷](/articles/voa/1041153.md)
-
-4-29 [中国称拜登上台后美军在中国周边活动大幅增加](/articles/voa/1041154.md)
 
