--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+5-13 [推特假帐号粉军制造中国战狼外交官支持度](/articles/rfa/1045615.md)
+
 5-13 [国台办称对“台独顽固分子”终身追责 台湾：令人啼笑皆非](/articles/rfa/1045616.md)
 
 5-12 [汶川地震十三周年 罹难者家属坚决追责](/articles/rfa/1045617.md)
@@ -598,6 +600,4 @@
 4-9 [维吾尔学者之子揭批央视纪录片](/articles/rfa/1045913.md)
 
 4-9 [《福布斯》富豪榜出炉，新晋富豪四成来自中国内地](/articles/rfa/1045914.md)
-
-4-9 [二十四位科学家要求重启溯源调查  无论中国是否参与](/articles/rfa/1045915.md)
 
