--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+5-13 [伊朗“刺儿头”前总统内贾德宣布竞选总统](/articles/rfi/1030003.md)
+
 5-13 [缅甸选美皇后扔掉高跟鞋 扛起武器打击军政权](/articles/rfi/1030004.md)
 
 5-13 [铁矿价格飞扬-安塞乐米塔尔员工罢工](/articles/rfi/1030005.md)
@@ -598,6 +600,4 @@
 5-8 [耶路撒冷清真寺区爆以巴冲突 十多人受伤 – 法国国际广播电台 - RFI](/articles/rfi/1030301.md)
 
 5-8 [在美国，亚裔人成了新冠疫情的替罪羊，频遭暴力攻击 - 法国世界报](/articles/rfi/1030302.md)
-
-5-8 [拜登: 别让中国抢美国饭碗](/articles/rfi/1030303.md)
 
