--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+5-13 [维舟 | 孩子坠亡之后](/articles/cdt/382605.md)
+
+5-13 [莫狄骁的山房 | 今日特稿丨当局的咎由自取 —— 驳成都49中事件里的谬论](/articles/cdt/382607.md)
+
 5-13 [【网络民议】四川官方已定调“颜色革命”？遇事不利境外势力](/articles/cdt/382615.md)
 
 5-12 [【404文库】余姚公安｜紧急预警！我市多名女性在“学习强国”上被骗数百万](/articles/cdt/382627.md)
@@ -596,8 +600,4 @@
 4-11 [知灼 | 从官方的通报看，金德强自杀，很莫名其妙](/articles/cdt/383914.md)
 
 4-11 [相父 | 哈耶克：为什么极权总是最坏者当权？](/articles/cdt/383916.md)
-
-4-11 [畏三何 | 安检魔咒](/articles/cdt/383919.md)
-
-4-11 [chenzijuan | 我在我的丈夫常玮平被酷刑的宝钛宾馆住了一晚](/articles/cdt/383920.md)
 
