--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-13 [贝莱德集团获准在中国扩充合资经营](/articles/voa/1040849.md)
+
+5-13 [美欧加强审查中资 中国战略野心受阻](/articles/voa/1040850.md)
+
 5-13 [香港警方国安处长涉不当行为休假受查 民主派批警队严人宽己难服众](/articles/voa/1040851.md)
 
 5-13 [美国国际宗教自由委员会：认定种族灭绝亦需防患于未然](/articles/voa/1040852.md)
@@ -596,8 +600,4 @@
 4-30 [船只相撞致百吨石油倾泻黄海 剩余货物处理预计周五开始](/articles/voa/1041147.md)
 
 4-30 [受到新冠疫情重创 西班牙斗牛活动缓步重启](/articles/voa/1041148.md)
-
-4-29 [印度疫情海啸般来袭 医疗系统不堪重负死亡人数屡创新高](/articles/voa/1041149.md)
-
-4-29 [美司法部通报：中国公民秦树人承认为中国军方采购并出口敏感产品和技术](/articles/voa/1041150.md)
 
