--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+5-13 [汶川大地震十三周年专访艾未未：如果不实践，我们就成了道德腐败的一部分](/articles/rfa/1045613.md)
+
 5-13 [加国华裔科学家将病毒送交中国疑点多  国会要求公布内情](/articles/rfa/1045614.md)
 
 5-13 [推特假帐号粉军制造中国战狼外交官支持度](/articles/rfa/1045615.md)
@@ -598,6 +600,4 @@
 4-9 [辽宁新安镇65位公务员仅3人愿接种国产疫](/articles/rfa/1045911.md)
 
 4-9 [被中国制裁的欧洲议员：我们不吃这一套](/articles/rfa/1045912.md)
-
-4-9 [维吾尔学者之子揭批央视纪录片](/articles/rfa/1045913.md)
 
