--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,14 @@
 自由亚洲电台
 ------
 
+5-13 [房地产税再次提上议事日程  利大还是弊大？](/articles/rfa/1045609.md)
+
+5-13 [美国制裁成都防邪办前主任余辉  再批种族灭绝](/articles/rfa/1045610.md)
+
+5-13 [新疆生育率大降近五成  人类近代史之最](/articles/rfa/1045611.md)
+
+5-13 [易富贤：这次人口普查质量最差](/articles/rfa/1045612.md)
+
 5-13 [汶川大地震十三周年专访艾未未：如果不实践，我们就成了道德腐败的一部分](/articles/rfa/1045613.md)
 
 5-13 [加国华裔科学家将病毒送交中国疑点多  国会要求公布内情](/articles/rfa/1045614.md)
@@ -592,12 +600,4 @@
 4-9 [中国人权研究会报告批美发动战争造成人道灾难](/articles/rfa/1045907.md)
 
 4-9 [西藏流亡政府改选前夕 西藏公布边境“十五禁”](/articles/rfa/1045908.md)
-
-4-9 [哈萨克族人热合江因间谍罪被囚13年  获释四年后抵哈国百人接机](/articles/rfa/1045909.md)
-
-4-9 [美日峰会前 中国躁动不安为台湾划红线](/articles/rfa/1045910.md)
-
-4-9 [辽宁新安镇65位公务员仅3人愿接种国产疫](/articles/rfa/1045911.md)
-
-4-9 [被中国制裁的欧洲议员：我们不吃这一套](/articles/rfa/1045912.md)
 
