--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+5-13 [成都死亡高中生母亲：“唯独事发那一段没有监控”](/articles/rfi/1030001.md)
+
 5-13 [法国想要推动Covid-19疫苗接种加速](/articles/rfi/1030002.md)
 
 5-13 [伊朗“刺儿头”前总统内贾德宣布竞选总统](/articles/rfi/1030003.md)
@@ -598,6 +600,4 @@
 5-8 [预期美国维持财政和货币刺激 美股收红 – 法国国际广播电台 - RFI](/articles/rfi/1030299.md)
 
 5-8 [英国解除部分外国旅游禁令 包括葡萄牙和以色列 – 法国国际广播电台 - RFI](/articles/rfi/1030300.md)
-
-5-8 [耶路撒冷清真寺区爆以巴冲突 十多人受伤 – 法国国际广播电台 - RFI](/articles/rfi/1030301.md)
 
