--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-13 [塞舌尔疫情反弹引发对国药疫苗有效性质疑](/articles/nyt/1046871.md)
+
 5-12 [面临人口危机的中国会全面放开生育吗？](/articles/nyt/1046872.md)
 
 5-12 [停工一年后，飞行员能安全复飞吗？](/articles/nyt/1046873.md)
@@ -598,6 +600,4 @@
 2-22 [香港电台遭“整改”，外界担忧港府打击新闻自由](/articles/nyt/1047169.md)
 
 2-22 [面临抵制冬奥呼声，中国人权问题可能改善吗？](/articles/nyt/1047170.md)
-
-2-22 [简报：冬奥前中国人权问题引关注；多人因“诋毁英烈”被拘](/articles/nyt/1047171.md)
 
