--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+5-13 [尼泊尔探险活动单位：圣母峰山区有2外国客丧命 – 法国国际广播电台 - RFI](/articles/rfi/1029977.md)
+
 5-13 [拜登尼坦雅胡通话 盼以巴冲突尽快落幕 – 法国国际广播电台 - RFI](/articles/rfi/1029978.md)
 
 5-13 [以色列军方：本周约1500枚火箭射自加萨 – 法国国际广播电台 - RFI](/articles/rfi/1029979.md)
@@ -598,6 +600,4 @@
 5-8 [英国地方选举结果约翰逊或忧喜参半？](/articles/rfi/1030275.md)
 
 5-8 [东耶路撒冷爆发严重巴以冲突，至少180人受伤](/articles/rfi/1030276.md)
-
-5-8 [欧盟驻中国大使承认双边关系和意见分歧日益增加](/articles/rfi/1030277.md)
 
