--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-13 [美国已无法再定义何为“民主”](/articles/nyt/1046869.md)
+
 5-13 [韩国女喜剧演员性骚扰争议：文化双标？](/articles/nyt/1046870.md)
 
 5-13 [塞舌尔疫情反弹引发对国药疫苗有效性质疑](/articles/nyt/1046871.md)
@@ -598,6 +600,4 @@
 2-22 [中国建起了“防火长城”，俄罗斯为什么不这么做？](/articles/nyt/1047167.md)
 
 2-22 [他自称朝鲜的“桂冠诗人”，两名女性称他为强奸犯](/articles/nyt/1047168.md)
-
-2-22 [香港电台遭“整改”，外界担忧港府打击新闻自由](/articles/nyt/1047169.md)
 
