--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-13 [美国接连遭网络入侵重创 拜登亡羊补牢颁布网络安全行政令](/articles/voa/1040832.md)
+
 5-13 [美参院委员会通过《无尽边疆法》 投资技术研发、防堵中国渗透](/articles/voa/1040833.md)
 
 5-13 [弥合穆斯林和犹太人鸿沟的虚拟开斋餐](/articles/voa/1040834.md)
@@ -598,6 +600,4 @@
 4-30 [供应瓶颈和需求疲软导致中国工厂活动增长放缓](/articles/voa/1041130.md)
 
 4-30 [拜登总统国会联席会议演说(准备稿全文翻译)](/articles/voa/1041131.md)
-
-4-30 [从乒乓外交到抵制冬奥，美中关系和体育纠缠50年](/articles/voa/1041132.md)
 
