--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+5-13 [澳智库：中官方政策导致新疆少数民族出生率下降](/articles/dw/1042501.md)
+
+5-13 [香港通过公职条例草案  考验区议员「爱国心」](/articles/dw/1042502.md)
+
+5-13 [香港教科书再传争议：英国统治是「占据」](/articles/dw/1042503.md)
+
 5-13 [国际奥委会：日本负面舆论会转向](/articles/dw/1042504.md)
 
 5-13 [美英德批新疆人权状况 中驳斥强迫劳动](/articles/dw/1042505.md)
@@ -594,10 +600,4 @@
 4-25 [墙外文摘：中国歌迷怎样去爱404艺人？](/articles/dw/1042799.md)
 
 4-25 [全球新冠疫苗接种超10亿](/articles/dw/1042800.md)
-
-4-25 [DW事实核查：关于新冠疫苗的四个迷思](/articles/dw/1042801.md)
-
-4-25 [加密货币全盘猛跌 个中缘由众说纷纭](/articles/dw/1042802.md)
-
-4-25 [人均消费减少1250欧元！新冠让德国人变节俭？](/articles/dw/1042803.md)
 
