--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,10 @@
 路透
 ------
 
+5-13 [意大利监管方要求TikTok采取进一步行动屏蔽13岁以下用户](/articles/reuters/1038144.md)
+
+5-13 [拜登暗示基建支出法案有妥协空间 尽管共和党就增税画下“红线”](/articles/reuters/1038145.md)
+
 5-13 [澳洲富邑葡萄酒集团预计2021年获利将下降 受中国关税政策影响](/articles/reuters/1038146.md)
 
 5-13 [亚股挫至七周低点 美国通胀数据带来紧缩担忧](/articles/reuters/1038147.md)
@@ -596,8 +600,4 @@
 5-5 [图表新闻：亚洲股市吸引外资净流入 为今年以来首次](/articles/reuters/1038442.md)
 
 5-5 [美国3月对香港贸易顺差按月扩大1.53倍 为自疫情大流行后最多的月份](/articles/reuters/1038443.md)
-
-5-5 [亚股在美科技股回落后走势平静 美国股指数期货回稳](/articles/reuters/1038444.md)
-
-5-5 [独家：波音737MAX因为电气接地问题面临新障碍--消息人士](/articles/reuters/1038445.md)
 
