--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,13 +3,17 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+5-13 [【CDTV】习近平考察遇“群演”？问：搞摄影的怎么不带相机呀？](/articles/cdt/382589.md)
+
+5-13 [懂事会大王｜很遗憾，成都49中事件，媒体捅不出真相](/articles/cdt/382591.md)
+
 5-13 [默存格物｜宋志标：49中，拒绝装饰你的梦](/articles/cdt/382593.md)
 
 5-13 [红星新闻｜成都49中学生坠亡事件调查](/articles/cdt/382595.md)
 
 5-13 [维舟 | 孩子坠亡之后](/articles/cdt/382605.md)
 
-5-13 [莫狄骁的山房 | 今日特稿丨当局的咎由自取 —— 驳成都49中事件里的谬论](/articles/cdt/382607.md)
+5-13 [莫狄骁的山房 | 今日特稿：当局的咎由自取 —— 驳成都49中事件里的谬论](/articles/cdt/382607.md)
 
 5-13 [【网络民议】四川官方已定调“颜色革命”？遇事不利境外势力](/articles/cdt/382615.md)
 
@@ -596,8 +600,4 @@
 4-11 [Raffi Khatchadourian ：逃离新疆](/articles/cdt/383903.md)
 
 4-11 [施明磊：自由了，程渊妻女！——4月9日完整版公开](/articles/cdt/383905.md)
-
-4-11 [【旧闻重温】小银 | 那些离开奥梅拉斯的人](/articles/cdt/383908.md)
-
-4-11 [外宣微记 | ​读外刊，刷抖音，常常哭笑不得](/articles/cdt/383911.md)
 
