--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+5-13 [纽太普同学｜去现场找“境外势力”的人 自己成了境外势力](/articles/cdt/382586.md)
+
 5-13 [【CDTV】习近平考察遇“群演”？问：搞摄影的怎么不带相机呀？](/articles/cdt/382589.md)
 
 5-13 [懂事会大王｜很遗憾，成都49中事件，媒体捅不出真相](/articles/cdt/382591.md)
@@ -598,6 +600,4 @@
 4-12 [【CDT周报】第十二期：体系性地避免这种悲剧发生 这样的目标值得我们竭尽全力](/articles/cdt/383901.md)
 
 4-11 [Raffi Khatchadourian ：逃离新疆](/articles/cdt/383903.md)
-
-4-11 [施明磊：自由了，程渊妻女！——4月9日完整版公开](/articles/cdt/383905.md)
 
