--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+5-13 [外媒指胡春华或取代刘鹤与美谈判    习近平与刘鹤关系引关注](/articles/rfa/1045607.md)
+
 5-13 [为刺激生育 中国或将整顿辅导班市场](/articles/rfa/1045608.md)
 
 5-13 [房地产税再次提上议事日程  利大还是弊大？](/articles/rfa/1045609.md)
@@ -598,6 +600,4 @@
 4-10 [租楼、买地、收购媒体        中企正在香港扩张势力](/articles/rfa/1045905.md)
 
 4-10 [意大利阻中资收购半导体   格陵兰选民重击中国开采稀土计划](/articles/rfa/1045906.md)
-
-4-9 [中国人权研究会报告批美发动战争造成人道灾难](/articles/rfa/1045907.md)
 
