--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+5-13 [豁免新冠疫苗专利？中方表示愿配合WTO](/articles/dw/1042491.md)
+
+5-13 [美输油管网遭袭后 出现部分供应紧张](/articles/dw/1042492.md)
+
 5-13 [高雄电厂出事故 台湾846万户轮流停电](/articles/dw/1042493.md)
 
 5-13 [美國總統拜登：「以色列有權自我防禦」](/articles/dw/1042494.md)
@@ -596,8 +600,4 @@
 4-26 [客座评论：美中新冷战是美苏冷战的1.5版](/articles/dw/1042789.md)
 
 4-26 [印度严重「缺氧」 多国紧急协助抗疫](/articles/dw/1042790.md)
-
-4-26 [贝多芬第九交响曲第三乐章](/articles/dw/1042791.md)
-
-4-26 [全球军费未受疫情影响 中国连26年增长](/articles/dw/1042792.md)
 
