--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-13 [两名登山者葬身珠穆朗玛峰](/articles/voa/1040825.md)
+
+5-13 [维吾尔孩子不见了？报告称中国采取强制性政策降低维族出生率](/articles/voa/1040826.md)
+
 5-13 [通货膨胀忧虑挫伤全球股市](/articles/voa/1040827.md)
 
 5-13 [关税推动美国进口中国产品下降](/articles/voa/1040828.md)
@@ -596,8 +600,4 @@
 4-30 [中国五一长假出游人数创新高 人群聚集构成病毒反扑隐患](/articles/voa/1041123.md)
 
 4-30 [全港37万外佣下周前需完成检测 续约要先打疫苗](/articles/voa/1041124.md)
-
-4-30 [台外长：中共没有统治台湾一天，如若犯台 台湾将战斗到底](/articles/voa/1041125.md)
-
-4-30 [烛光已灭自由不再 香港活动人士承认去年六四“参与未经批准集结”](/articles/voa/1041126.md)
 
