--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+5-14 [中国人口减少冲撞习近平的中国梦](/articles/rfi/1029935.md)
+
+5-14 [面对通胀，美联储会不会提高利率  ？ - 今日经济](/articles/rfi/1029936.md)
+
 5-14 [日本全国医师工会要求日本政府停止举办东京奥运](/articles/rfi/1029937.md)
 
 5-14 [世界报：对中国幻想终结  欧洲风向转往印太](/articles/rfi/1029938.md)
@@ -596,8 +600,4 @@
 5-9 [联合国缅怀第二次世界大战死难者](/articles/rfi/1030233.md)
 
 5-9 [欧洲日：马克龙赴斯特拉斯堡推动彩绘欧洲未来](/articles/rfi/1030234.md)
-
-5-9 [印度汉至今八人染疫两密切接触者在中环置地工作](/articles/rfi/1030235.md)
-
-5-9 [大陆新增7宗华航再有机师打完疫苗碓诊](/articles/rfi/1030236.md)
 
