--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+5-14 [中国官媒高调报道台湾亲共骑行者  被指 “大内宣”](/articles/rfa/1045601.md)
+
 5-14 [英国吁筹组国际网络安全联盟  对抗中、俄等国恶意网攻](/articles/rfa/1045602.md)
 
 5-13 [“漫威”两大片传遭中国封杀  赵婷新作恐无缘大陆市场](/articles/rfa/1045603.md)
@@ -598,6 +600,4 @@
 4-12 [禁止评论中国军事装备   多个军事论坛关闭自媒体封号](/articles/rfa/1045899.md)
 
 4-10 [专访麦艾文：美中经济会相互依存 担忧误判和意外引发冲突](/articles/rfa/1045900.md)
-
-4-10 [美参院推战略竞争法抗衡中国   中方“坚决反对”](/articles/rfa/1045901.md)
 
