--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+5-14 [美国贸易代表戴琪：尊重中国 但中国要遵守规则](/articles/rfa/1045599.md)
+
+5-14 [成都中学生坠亡案盖棺论定      集体回避一关键问题](/articles/rfa/1045600.md)
+
 5-14 [中国官媒高调报道台湾亲共骑行者  被指 “大内宣”](/articles/rfa/1045601.md)
 
 5-14 [英国吁筹组国际网络安全联盟  对抗中、俄等国恶意网攻](/articles/rfa/1045602.md)
@@ -596,8 +600,4 @@
 4-12 [中国强制接种疫苗被叫停   高福承认国产疫苗保护力不高](/articles/rfa/1045897.md)
 
 4-12 [布林肯警告北京 试图以武力改变现状是严重错误](/articles/rfa/1045898.md)
-
-4-12 [禁止评论中国军事装备   多个军事论坛关闭自媒体封号](/articles/rfa/1045899.md)
-
-4-10 [专访麦艾文：美中经济会相互依存 担忧误判和意外引发冲突](/articles/rfa/1045900.md)
 
