--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-14 [“不要惊慌”：拜登呼吁美国人莫去加油站抢购汽油](/articles/voa/1040815.md)
+
 5-14 [“宁死不回中共统治的香港”: 流亡美国的反送中示威者](/articles/voa/1040816.md)
 
 5-14 [台湾邦交国洪都拉斯拟在中国设办事处购买疫苗 美国谴责出于政治而利用疫苗](/articles/voa/1040817.md)
@@ -598,6 +600,4 @@
 5-1 [庆祝植树节 第一夫人在白宫帮助种树](/articles/voa/1041113.md)
 
 5-1 [国际科学家再次呼吁世卫组织进一步调查新冠病毒起源](/articles/voa/1041114.md)
-
-5-1 [印度因新冠疫情陷入人道危机 美国救援物资飞抵新德里](/articles/voa/1041115.md)
 
