--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,12 @@
 自由亚洲电台
 ------
 
+5-14 [伊斯兰教会长说新疆信仰很自由  五岁的恐怖分子？](/articles/rfa/1045596.md)
+
+5-14 [美国似向中国政府多部门官员及家属停发签证](/articles/rfa/1045597.md)
+
+5-14 [美官员：对华政策宗旨为捍卫美国价值观](/articles/rfa/1045598.md)
+
 5-14 [美国贸易代表戴琪：尊重中国 但中国要遵守规则](/articles/rfa/1045599.md)
 
 5-14 [成都中学生坠亡案盖棺论定      集体回避一关键问题](/articles/rfa/1045600.md)
@@ -594,10 +600,4 @@
 4-12 [西藏流亡政府大选决选   达赖喇嘛重申西藏不追求独立](/articles/rfa/1045894.md)
 
 4-12 [美舰长跷脚监控辽宁舰  中国网民崩溃](/articles/rfa/1045895.md)
-
-4-12 [重庆残疾维权人士崔斌卷入维稳人员命案被判死缓](/articles/rfa/1045896.md)
-
-4-12 [中国强制接种疫苗被叫停   高福承认国产疫苗保护力不高](/articles/rfa/1045897.md)
-
-4-12 [布林肯警告北京 试图以武力改变现状是严重错误](/articles/rfa/1045898.md)
 
