--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-14 [匈牙利计划建立第一所中国在欧洲的大学，引发安全和宣传恐惧](/articles/voa/1040813.md)
+
+5-14 [白宫要义: 戴琪: 强迫劳动是“粗野补贴”，将与布林肯讨论是否抵制冬奥会](/articles/voa/1040814.md)
+
 5-14 [“不要惊慌”：拜登呼吁美国人莫去加油站抢购汽油](/articles/voa/1040815.md)
 
 5-14 [“宁死不回中共统治的香港”: 流亡美国的反送中示威者](/articles/voa/1040816.md)
@@ -596,8 +600,4 @@
 5-1 [新冠疫情严重 美国对印度实施旅行限制](/articles/voa/1041111.md)
 
 5-1 [焦点对话: 专访前美国国务次卿克拉奇: 我绝不会向习近平屈膝](/articles/voa/1041112.md)
-
-5-1 [庆祝植树节 第一夫人在白宫帮助种树](/articles/voa/1041113.md)
-
-5-1 [国际科学家再次呼吁世卫组织进一步调查新冠病毒起源](/articles/voa/1041114.md)
 
