--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+5-14 [拜登对台政策撼动“一中”鲁莽危险？美专家：对抗中国威胁必须自我防卫](/articles/voa/1040808.md)
+
+5-14 [又有一组科学家呼吁对新冠病毒起源进行更深入的调查](/articles/voa/1040809.md)
+
+5-14 [美国贸易代表：有关中国贸易政策的审议“时间至关重要”](/articles/voa/1040810.md)
+
+5-14 [美参议院委员会一致通过禁止联邦政府设备使用TikTok的法案](/articles/voa/1040811.md)
+
 5-14 [美国继续支持以色列 但裂痕开始出现](/articles/voa/1040812.md)
 
 5-14 [匈牙利计划建立第一所中国在欧洲的大学，引发安全和宣传恐惧](/articles/voa/1040813.md)
@@ -592,12 +600,4 @@
 5-1 [美国务院：必须在世界卫生大会听到台湾的声音](/articles/voa/1041106.md)
 
 5-1 [苏利文称拜登百日执政让北京三思而行，专家展望下个百日](/articles/voa/1041107.md)
-
-5-1 [美、日、韩举行双边和三边对话，加强对中国的威慑](/articles/voa/1041108.md)
-
-5-1 [白宫国安顾问：已向中国表明不可单方面改变台海现状](/articles/voa/1041109.md)
-
-5-1 [白宫：一亿美国成年人完全接种新冠疫苗](/articles/voa/1041110.md)
-
-5-1 [新冠疫情严重 美国对印度实施旅行限制](/articles/voa/1041111.md)
 
