--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+5-14 [新疆宗教领袖捍卫北京政策  调查报导结果相左](/articles/dw/1042486.md)
+
+5-14 [塞舌尔打国药疫苗没用？北京：涉华必黑](/articles/dw/1042487.md)
+
+5-14 [阿斯托尔·皮亚佐拉:探戈四重奏](/articles/dw/1042488.md)
+
 5-13 [高雄电厂出事故 台湾约400万户轮流停电](/articles/dw/1042489.md)
 
 5-13 [德语媒体：民主国家拿什么抵抗中国模式？](/articles/dw/1042490.md)
@@ -594,10 +600,4 @@
 4-26 [切尔诺贝利核电站泄漏35年后](/articles/dw/1042784.md)
 
 4-26 [中国防长访越南 越方称“不会跟风反中”](/articles/dw/1042785.md)
-
-4-26 [媒体：欧盟拟今夏向美国游客开放入境](/articles/dw/1042786.md)
-
-4-26 [评论：印度——一场灾难正在发生](/articles/dw/1042787.md)
-
-4-26 [亚裔电影人大放异彩   赵婷夺奥斯卡最佳导演奖](/articles/dw/1042788.md)
 
