--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-14 [美奥委会负责人致函国会：不要让运动员抵制北京冬奥会](/articles/voa/1040807.md)
+
 5-14 [拜登对台政策撼动“一中”鲁莽危险？美专家：对抗中国威胁必须自我防卫](/articles/voa/1040808.md)
 
 5-14 [又有一组科学家呼吁对新冠病毒起源进行更深入的调查](/articles/voa/1040809.md)
@@ -598,6 +600,4 @@
 5-1 [中国再度上榜美国知识产权“黑名单”](/articles/voa/1041105.md)
 
 5-1 [美国务院：必须在世界卫生大会听到台湾的声音](/articles/voa/1041106.md)
-
-5-1 [苏利文称拜登百日执政让北京三思而行，专家展望下个百日](/articles/voa/1041107.md)
 
