--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,10 @@
 金融时报
 ------
 
+5-14 [意大利总理德拉吉放弃年薪](/articles/ft/1045624.md)
+
+5-14 [如何甄别好的理财顾问？](/articles/ft/1045625.md)
+
 5-14 [伦敦全面重启前的露天餐厅体验](/articles/ft/1045626.md)
 
 5-13 [以色列和哈马斯冲突升级](/articles/ft/1045627.md)
@@ -596,8 +600,4 @@
 3-11 [北欧经典诗歌与新纳粹宣传——谈瑞典文学院的独特官司](/articles/ft/1045922.md)
 
 3-11 [中美“2+2”外交会晤的16个看点](/articles/ft/1045923.md)
-
-3-11 [美元债券还有投资价值吗？](/articles/ft/1045924.md)
-
-3-11 [退欧后英国制造商收入下滑](/articles/ft/1045925.md)
 
