--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-14 [美参院两党齐声呼吁抗中 鲁比奥：输了就是世纪耻辱等着我们](/articles/voa/1040805.md)
+
 5-14 [拜登政府拟为国际创业者开大门 料将吸引大批中国人申请](/articles/voa/1040806.md)
 
 5-14 [美奥委会负责人致函国会：不要让运动员抵制北京冬奥会](/articles/voa/1040807.md)
@@ -598,6 +600,4 @@
 5-1 [白宫国家安全顾问：中国在气候变化方面的合作并非是给美国帮忙](/articles/voa/1041103.md)
 
 5-1 [韩国中国城项目因民众抗议喊停 中韩合作面临民意阻力](/articles/voa/1041104.md)
-
-5-1 [中国再度上榜美国知识产权“黑名单”](/articles/voa/1041105.md)
 
