--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-14 [印度新冠危机波及邻国：“感觉就像世界大战”](/articles/nyt/1046864.md)
+
 5-14 [高雄电厂发生故障，台湾多地大停电](/articles/nyt/1046865.md)
 
 5-14 [“宠物盲盒”引发中国公众愤怒](/articles/nyt/1046866.md)
@@ -598,6 +600,4 @@
 2-23 [精子在告诉我们什么？](/articles/nyt/1047162.md)
 
 2-23 [无惧暴力镇压，缅甸抗议者举行全国大罢工](/articles/nyt/1047163.md)
-
-2-23 [针对亚裔的种族暴力揭示的问题](/articles/nyt/1047164.md)
 
