--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-14 [巴以冲突阴影下，加沙平民的恐惧与惊骇](/articles/nyt/1046863.md)
+
 5-14 [印度新冠危机波及邻国：“感觉就像世界大战”](/articles/nyt/1046864.md)
 
 5-14 [高雄电厂发生故障，台湾多地大停电](/articles/nyt/1046865.md)
@@ -598,6 +600,4 @@
 2-23 [疫情加剧生活及文化压力，日本女性自杀率飙升](/articles/nyt/1047161.md)
 
 2-23 [精子在告诉我们什么？](/articles/nyt/1047162.md)
-
-2-23 [无惧暴力镇压，缅甸抗议者举行全国大罢工](/articles/nyt/1047163.md)
 
