--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,14 @@
 法广
 ------
 
+5-14 [马克龙要求阿塞拜疆军人立刻从亚美尼亚边境撤离](/articles/rfi/1029904.md)
+
+5-14 [毕卡索坐在窗前的女人 1亿340万美元成交 – 法国国际广播电台 - RFI](/articles/rfi/1029905.md)
+
+5-14 [追随亚股涨势 欧股开盘稳步上涨 – 法国国际广播电台 - RFI](/articles/rfi/1029906.md)
+
+5-14 [美国贸易代表戴琪：需新法律工具对抗中国未来威胁](/articles/rfi/1029907.md)
+
 5-14 [日本停办东京奥运连署 超过35万人响应 – 法国国际广播电台 - RFI](/articles/rfi/1029908.md)
 
 5-14 [亚美尼亚总理控亚塞拜然入侵 紧张情势升高 – 法国国际广播电台 - RFI](/articles/rfi/1029909.md)
@@ -592,12 +600,4 @@
 5-10 [白宫防疫协调官：美国疫情正在转危为安](/articles/rfi/1030202.md)
 
 5-10 [美日法11日起联合军演    法军舰进佐世保港](/articles/rfi/1030203.md)
-
-5-10 [印度政府聘数百退役军医增援](/articles/rfi/1030204.md)
-
-5-10 [厄媒： 22岁中国女翻译在厄瓜多尔身亡](/articles/rfi/1030205.md)
-
-5-10 [中国产航空3机     应急救援生力军](/articles/rfi/1030206.md)
-
-5-10 [调查：新冠期间德国近半亚裔受访者遭遇种族歧视](/articles/rfi/1030207.md)
 
