--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+5-14 [长平观察：官媒垄断的“真相”](/articles/dw/1042483.md)
+
+5-14 [专访：中国打压维吾尔人产生的影响将延续好几世代](/articles/dw/1042484.md)
+
 5-14 [天价罚款重挫阿里巴巴 马云丢首富宝座](/articles/dw/1042485.md)
 
 5-14 [新疆宗教领袖捍卫北京政策  调查报导结果相左](/articles/dw/1042486.md)
@@ -596,8 +600,4 @@
 4-26 [围绕医用氧气的方方面面](/articles/dw/1042781.md)
 
 4-26 [国际媒体聚焦赵婷:“改写奥斯卡历史的女性”](/articles/dw/1042782.md)
-
-4-26 [本届奥斯卡获奖的是……](/articles/dw/1042783.md)
-
-4-26 [切尔诺贝利核电站泄漏35年后](/articles/dw/1042784.md)
 
