--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+5-14 [《国安法》下的“新香港”  调查显示六成人认为学术自由受限](/articles/rfa/1045594.md)
+
+5-14 [白宫官员：美台交往基于非官方关系 确保符合美台利益](/articles/rfa/1045595.md)
+
 5-14 [伊斯兰教会长说新疆信仰很自由  五岁的恐怖分子？](/articles/rfa/1045596.md)
 
 5-14 [美国似向中国政府多部门官员及家属停发签证](/articles/rfa/1045597.md)
@@ -596,8 +600,4 @@
 4-13 [强迫认罪受害者联署  吁欧卫星业者封杀中国环球电视网](/articles/rfa/1045892.md)
 
 4-13 [担心中国不悦？加拿大据报干预颁奖给蔡英文](/articles/rfa/1045893.md)
-
-4-12 [西藏流亡政府大选决选   达赖喇嘛重申西藏不追求独立](/articles/rfa/1045894.md)
-
-4-12 [美舰长跷脚监控辽宁舰  中国网民崩溃](/articles/rfa/1045895.md)
 
