--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+5-14 [撤出阿富汗 美国寻找新驻军地？](/articles/dw/1042475.md)
+
+5-14 [德國警方擔憂：偽造疫苗接種證明難以識別](/articles/dw/1042476.md)
+
 5-14 [口误還是政策转向？澳总理称“支持一国两制”](/articles/dw/1042477.md)
 
 5-14 [中国火星车即将着陆 难度颇高](/articles/dw/1042478.md)
@@ -596,8 +600,4 @@
 4-27 [中国封杀奥斯卡 赵婷变成「那个女孩」](/articles/dw/1042773.md)
 
 4-27 [国台办批民进党发言挑衅 蔡英文到底说了什么?](/articles/dw/1042774.md)
-
-4-26 [疫情下民怨飙升 印度令社媒删帖](/articles/dw/1042775.md)
-
-4-26 [救命的氧气怎可断掉？](/articles/dw/1042776.md)
 
