--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+5-14 [六人行团聚特别篇5月27日开播 客串嘉宾有BTS、女神卡卡 – 法国国际广播电台 - RFI](/articles/rfi/1029895.md)
+
+5-14 [亚股普遍上扬 收复本周部分失土 – 法国国际广播电台 - RFI](/articles/rfi/1029896.md)
+
+5-14 [担心巴以冲突失控 安理会周日开会讨论 - 要闻解说](/articles/rfi/1029897.md)
+
 5-14 [缅甸撤告 释放日籍记者北角裕树 – 法国国际广播电台 - RFI](/articles/rfi/1029898.md)
 
 5-14 [台北市舞厅酒吧夜店三温暖等八大行业明起停业期阻断传播链](/articles/rfi/1029899.md)
@@ -594,10 +600,4 @@
 5-10 [喀布尔爆炸案刚过 塔利班宣布开斋节停火3天 – 法国国际广播电台 - RFI](/articles/rfi/1030193.md)
 
 5-10 [佛奇：美国COVID官方染疫死亡数据少算 – 法国国际广播电台 - RFI](/articles/rfi/1030194.md)
-
-5-10 [美警：男嫌闯生日派对枪杀6人后自戕 – 法国国际广播电台 - RFI](/articles/rfi/1030195.md)
-
-5-10 [SpaceX将启动登月任务 接受狗狗币付款 – 法国国际广播电台 - RFI](/articles/rfi/1030196.md)
-
-5-10 [马德里网球公开赛 兹韦列夫拍落贝雷蒂尼封王 – 法国国际广播电台 - RFI](/articles/rfi/1030197.md)
 
