--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-14 [领先科学家称，不能排除COVID-19实验室泄漏理论](/articles/voa/1040803.md)
+
+5-14 [合成照借古讽今 中共反西方宣传是否奏效？](/articles/voa/1040804.md)
+
 5-14 [美参院两党齐声呼吁抗中 鲁比奥：输了就是世纪耻辱等着我们](/articles/voa/1040805.md)
 
 5-14 [拜登政府拟为国际创业者开大门 料将吸引大批中国人申请](/articles/voa/1040806.md)
@@ -596,8 +600,4 @@
 5-1 [孙大午案前景暗淡 评论：赶上肃杀期](/articles/voa/1041101.md)
 
 5-1 [中国命令腾讯等大型科技公司限制其金融业务](/articles/voa/1041102.md)
-
-5-1 [白宫国家安全顾问：中国在气候变化方面的合作并非是给美国帮忙](/articles/voa/1041103.md)
-
-5-1 [韩国中国城项目因民众抗议喊停 中韩合作面临民意阻力](/articles/voa/1041104.md)
 
