--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-14 [领先科学家称，不能排除COVID-19实验室泄漏理论](/articles/voa/1040802.md)
+
 5-14 [领先科学家称，不能排除COVID-19实验室泄漏理论](/articles/voa/1040803.md)
 
 5-14 [合成照借古讽今 中共反西方宣传是否奏效？](/articles/voa/1040804.md)
@@ -598,6 +600,4 @@
 5-1 [印度疫情严重可能加剧全球疫苗短缺](/articles/voa/1041100.md)
 
 5-1 [孙大午案前景暗淡 评论：赶上肃杀期](/articles/voa/1041101.md)
-
-5-1 [中国命令腾讯等大型科技公司限制其金融业务](/articles/voa/1041102.md)
 
