--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+5-14 [杰斯申请保释遭拒 被点名台湾两组织：没有评论](/articles/rfa/1045591.md)
+
+5-14 [女儿结核病危 人权律师唐吉田欲赴日吁当局撤销边控](/articles/rfa/1045592.md)
+
 5-14 [日本2021防卫白皮书首提台海稳定](/articles/rfa/1045593.md)
 
 5-14 [《国安法》下的“新香港”  调查显示六成人认为学术自由受限](/articles/rfa/1045594.md)
@@ -596,8 +600,4 @@
 4-13 [美国召开半导体高峰会  中国企业未受邀](/articles/rfa/1045889.md)
 
 4-13 [维权人士郭洪伟死亡疑点重重，八旬父母要调查到底](/articles/rfa/1045890.md)
-
-4-13 [美教育工作者：学术交流不应成为美中关系牺牲品](/articles/rfa/1045891.md)
-
-4-13 [强迫认罪受害者联署  吁欧卫星业者封杀中国环球电视网](/articles/rfa/1045892.md)
 
