--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-15 [香港民调：近6成人指国安法限制学术自由 学者忧引发逃亡潮](/articles/voa/1040793.md)
+
+5-15 [中国一学生因父亲身份被拒签？纽时：大环境已经变化](/articles/voa/1040794.md)
+
 5-15 [加拿大大学与中国科技合作项目受质疑，联邦风险指导纲领六月出台](/articles/voa/1040795.md)
 
 5-15 [中国加强与中亚联系 俄媒激烈抨击北京干涉内政](/articles/voa/1040796.md)
@@ -596,8 +600,4 @@
 5-2 [中国军方证实山东号航母近期在南中国海演习](/articles/voa/1041091.md)
 
 5-2 [“东升西降”？美国百日新象问你：谁说的？](/articles/voa/1041092.md)
-
-5-2 [伊朗核问题谈判据报取得进展](/articles/voa/1041093.md)
-
-5-2 [缅甸民众继续游行，抗议军政府统治](/articles/voa/1041094.md)
 
