--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+5-15 [知识分子｜学者研究揭秘：“一审不判离” 为何如此普遍](/articles/cdt/382557.md)
+
 5-14 [数据归集处｜三论人口之惑](/articles/cdt/382559.md)
 
 5-14 [立场新闻 | 港府引《国安法》冻结黎智英股份及三公司财产 涉逾三亿元](/articles/cdt/382561.md)
@@ -598,6 +600,4 @@
 4-12 [【404文库】枪稿｜这部电影写透了什么是“丑陋的中国人”](/articles/cdt/383877.md)
 
 4-12 [【404文库】枪稿｜《色戒》十周年](/articles/cdt/383879.md)
-
-4-12 [【404文库】枪稿｜重要的不是《出租车司机》被过誉，而是它不见了](/articles/cdt/383882.md)
 
