--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-15 [一名参与中国“千人计划”的免疫学专家因申请联邦科研经费期间隐瞒实情而被判处监禁](/articles/voa/1040791.md)
+
 5-15 [港府依据港版国安法冻结壹传媒创办人黎智英财产](/articles/voa/1040792.md)
 
 5-15 [香港民调：近6成人指国安法限制学术自由 学者忧引发逃亡潮](/articles/voa/1040793.md)
@@ -598,6 +600,4 @@
 5-2 [世界新闻自由日：警惕北京对新闻自由采取的“两手策略”](/articles/voa/1041089.md)
 
 5-2 [全球芯片荒促使中国将目光转向台湾](/articles/voa/1041090.md)
-
-5-2 [中国军方证实山东号航母近期在南中国海演习](/articles/voa/1041091.md)
 
