--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-15 [报告指中国太阳能产业供应链涉强迫劳动 拜登政府正在考虑进行制裁](/articles/voa/1040789.md)
+
+5-15 [美两党议员同意成立委员会调查冲击国会大厦事件](/articles/voa/1040790.md)
+
 5-15 [一名参与中国“千人计划”的免疫学专家因申请联邦科研经费期间隐瞒实情而被判处监禁](/articles/voa/1040791.md)
 
 5-15 [港府依据港版国安法冻结壹传媒创办人黎智英财产](/articles/voa/1040792.md)
@@ -596,8 +600,4 @@
 5-3 [朝鲜高官星期天发表系列谈话抨击美韩 学者：金正恩根本不打算放弃核武器](/articles/voa/1041087.md)
 
 5-2 [中国海军新型核潜艇导弹据称能打到美国全境 美军高官：警惕中国核武发展](/articles/voa/1041088.md)
-
-5-2 [世界新闻自由日：警惕北京对新闻自由采取的“两手策略”](/articles/voa/1041089.md)
-
-5-2 [全球芯片荒促使中国将目光转向台湾](/articles/voa/1041090.md)
 
