--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-15 [因疫情而关闭的华盛顿史密森尼博物馆群开始重新对公众开放](/articles/voa/1040787.md)
+
 5-15 [风电场还是“特洛伊木马”？中国对美基础设施投资再遇阻](/articles/voa/1040788.md)
 
 5-15 [报告指中国太阳能产业供应链涉强迫劳动 拜登政府正在考虑进行制裁](/articles/voa/1040789.md)
@@ -598,6 +600,4 @@
 5-3 [中共政法委官微发帖讥讽印度疫情，网友愤怒](/articles/voa/1041085.md)
 
 5-3 [印度继续遭受新冠病毒大流行的重创 只有2%的人口接种了新冠疫苗](/articles/voa/1041086.md)
-
-5-3 [朝鲜高官星期天发表系列谈话抨击美韩 学者：金正恩根本不打算放弃核武器](/articles/voa/1041087.md)
 
